Euro PCB outline and some part changes (BREAKS CURRENT FIRMWARE!)
- Swapped A and B sides on Bus transcievers for easier tracing.
  (Not sure if this is ideal, yet, but certainly better than
  before!). THIS BREAKS CURRENT FIRMWARE! Need to change
  direction bits!
- Prefix bus labels from the cartridge to the transcievers with 'E'
  (for 'external') to de-confuse Pcbnew.
- Connect second +5V and GND connectors to power nets for easier
  board connections.
- revert previous changes to cartridge bus footprint.

--- a/hardware/Kicad/MultiRomCard.cmp
+++ b/hardware/Kicad/MultiRomCard.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2015-04-22 BZR 5621)-product   date = Donnerstag, 23. April 2015 19:40:38
+Cmp-Mod V01 Created by Cvpcb (2015-04-25 BZR 5623)-product   date = Sonntag, 26. April 2015 18:46:10
 
 BeginCmp
 TimeStamp = /54D6988D;
